single article page style updated

--- a/src/components/rootStyle.scss
+++ b/src/components/rootStyle.scss
@@ -4,6 +4,8 @@ $global-secondary-background: #ec595a;
 $navbar-background: $global-primary-background;
 $roboto: 'Roboto', sans-serif;
 $montserrat: 'Montserrat', sans-serif;
+$black-primary:#333;
+$black-secondary:#929292;
 
 @import 'node_modules/uikit/src/scss/variables-theme.scss';
 @import 'node_modules/uikit/src/scss/mixins-theme.scss';
