--- a/src/components/rootStyle.scss
+++ b/src/components/rootStyle.scss
@@ -47,3 +47,10 @@ h1, h2, h3, h4, h5 {font-family: $montserrat}
 .headroom-wrapper {
   height: auto !important;
 }
+
+.post-lists{
+  border-top:solid 1px #eee;
+  border-bottom:solid 1px #eee;
+  padding:100px 0px;
+  background:#f7f7f7;
+}
