menu and header style updated

--- a/src/components/rootStyle.scss
+++ b/src/components/rootStyle.scss
@@ -54,3 +54,6 @@ h1, h2, h3, h4, h5 {font-family: $montserrat}
   padding:100px 0px;
   background:#f7f7f7;
 }
+.post-list-of-category{
+  padding:50px 0px 100px;
+}
