--- a/src/components/rootStyle.scss
+++ b/src/components/rootStyle.scss
@@ -49,8 +49,8 @@ h1, h2, h3, h4, h5 {font-family: $montserrat}
 }
 
 .post-lists{
-  border-top:solid 1px #eee;
-  border-bottom:solid 1px #eee;
+  border-top:solid 1px #e4e4e4;
+  border-bottom:solid 1px #e4e4e4;
   padding:100px 0px;
   background:#f7f7f7;
 }
