--- a/src/components/rootStyle.scss
+++ b/src/components/rootStyle.scss
@@ -1,7 +1,7 @@
 $global-muted-background: #eceff4;
-$global-primary-background: #ec595a;
+//$global-primary-background: #ec595a;
 $global-secondary-background: #ec595a;
-$navbar-background: $global-primary-background;
+//$navbar-background: $global-primary-background;
 $roboto: 'Roboto', sans-serif;
 $montserrat: 'Montserrat', sans-serif;
 $black-primary:#333;
