--- a/src/components/rootStyle.scss
+++ b/src/components/rootStyle.scss
@@ -71,3 +71,6 @@ h1, h2, h3, h4, h5 {font-family: $titleFonts;font-weight: 900;}
     line-height: 1.5;
     color: #333;
 }
+.uk-navbar-nav li a {
+    font-family: "Noto Sans JP", sans-serif;
+}
