category page done

--- a/src/utils/layout.css
+++ b/src/utils/layout.css
@@ -1,6 +1,10 @@
 .common-spacing {
-  padding: 1rem 1.5rem;
+	padding: 1rem 1.5rem;
 }
 .image-objectfit-contain img{
 	object-fit: contain;
+}
+html.has-navbar-fixed-top,
+body.has-navbar-fixed-top {
+	padding-top: 5.5rem;
 }
