site loading issue fixed

--- a/src/utils/layout.css
+++ b/src/utils/layout.css
@@ -8,3 +8,9 @@ html.has-navbar-fixed-top,
 body.has-navbar-fixed-top {
 	padding-top: 5.5rem;
 }
+.is-flex{
+	display: flex;
+}
+.is-justified-center{
+	justify-content: center;
+}
